# pythreedee_aw

./: LICENSE  pyproject.toml  readme.md
pythreedee_aw/src/pythreedee/: render.py  setup.py  shapes.py
src/pythreedee/: camera.py  light.py  window.py
