[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pythreedee"
version = "0.0.1"
authors = [
  { name="awinter", email="augpcs@gmail.com" },
]
description = "Simple 3D rendering"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["pygame"]
[project.urls]
Homepage = "https://github.com/awinter34/pythreedee"
Issues = "https://github.com/awinter34/pythreedee/issues"